Bug 92301 - Attaching Yuan EC372S (HP ExpressCard, PN:412110-002) gives kernel trouble
Summary: Attaching Yuan EC372S (HP ExpressCard, PN:412110-002) gives kernel trouble
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: USB (show other bugs)
Hardware: x86-64 Linux
: P1 high
Assignee: Greg Kroah-Hartman
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-29 21:08 UTC by Jonas Jonsson
Modified: 2015-06-25 19:51 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.18.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
The .config-file that the kernel is built with ... (168.56 KB, text/plain)
2015-01-29 21:15 UTC, Jonas Jonsson
Details

Description Jonas Jonsson 2015-01-29 21:08:00 UTC
Jan 29 21:26:51 plattpcn kernel: [   17.322493] input: UVC Camera (05ca:1812) as /devices/pci0000:00/0000:00:1d.7/usb2/2-4/2-4:1.0/input/input10
Jan 29 21:26:51 plattpcn kernel: [   17.322621] usbcore: registered new interface driver uvcvideo
Jan 29 21:26:51 plattpcn kernel: [   17.322623] USB Video Class driver (1.1.1)
Jan 29 21:26:51 plattpcn kernel: [   17.583002] input: HP WMI hotkeys as /devices/virtual/input/input11
Jan 29 21:26:51 plattpcn kernel: [   18.108106] iwl4965 0000:02:00.0: loaded firmware version 228.61.2.24
Jan 29 21:26:51 plattpcn kernel: [   18.360154] ieee80211 phy0: Selected rate control algorithm 'iwl-4965-rs'
Jan 29 21:26:51 plattpcn kernel: [   18.620404] dvb-usb: found a 'Yuan EC372S' in cold state, will try to load a firmware
Jan 29 21:26:51 plattpcn kernel: [   18.993039] dvb-usb: downloading firmware from file 'dvb-usb-dib0700-1.20.fw'
Jan 29 21:26:51 plattpcn kernel: [   19.194634] dib0700: firmware started successfully.
Jan 29 21:26:51 plattpcn kernel: [   19.695174] dvb-usb: found a 'Yuan EC372S' in warm state.
Jan 29 21:26:51 plattpcn kernel: [   19.695448] dvb-usb: will pass the complete MPEG2 transport stream to the software demuxer.
Jan 29 21:26:51 plattpcn kernel: [   19.695527] DVB: registering new adapter (Yuan EC372S)
Jan 29 21:26:51 plattpcn kernel: [   20.090809] BUG: unable to handle kernel NULL pointer dereference at 0000000000000080
Jan 29 21:26:51 plattpcn kernel: [   20.090987] IP: [<ffffffffa057b061>] dib7000p_attach+0x11/0xa0 [dib7000p]
Jan 29 21:26:51 plattpcn kernel: [   20.091007] PGD 36893067 PUD b95b0067 PMD 0 
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Oops: 0002 [#1] SMP 
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Modules linked in: dib7000p(E) dvb_usb_dib0700(E+) dib7000m(E) arc4(E) dib0090(E) dib0070(E) dib3000mc(E) dibx000_common(E) dvb_usb(E) dvb_core(E) coretemp(E) hp_wmi(E) rc_core(E) sparse_keymap(E) uvcvideo(E) iwl4965(E) videobuf2_vmalloc(E) snd_hda_codec_si3054(E) kvm(E) iwlegacy(E) snd_hda_codec_realtek(E) videobuf2_memops(E) mac80211(E) videobuf2_core(E) snd_hda_codec_generic(E) v4l2_common(E) videodev(E) snd_hda_intel(E) joydev(E) snd_hda_controller(E) serio_raw(E) snd_hda_codec(E) snd_hwdep(E) r852(E) cfg80211(E) snd_pcm(E) sm_common(E) btusb(E) nand(E) snd_seq_midi(E) nand_ecc(E) snd_seq_midi_event(E) bluetooth(E) snd_rawmidi(E) nand_bch(E) snd_seq(E) bch(E) r592(E) snd_seq_device(E) nand_ids(E) snd_timer(E) mtd(E) memstick(E) drm(E) snd(E) soundcore(E) lpc_ich(E) wmi(E) video(E) mac_hid(E) parport_pc(E) ppdev(E) lp(E) parport(E) psmouse(E) ahci(E) libahci(E) firewire_ohci(E) firewire_core(E) sdhci_pci(E) crc_itu_t(E) sdhci(E) r8169(E) mii(E)
Jan 29 21:26:51 plattpcn kernel: [   20.091007] CPU: 0 PID: 442 Comm: systemd-udevd Tainted: G            E  3.18.3jonas #1
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Hardware name: Hewlett-Packard HP Pavilion dv9700 Notebook PC    /30CB, BIOS F.59      11/25/2008
Jan 29 21:26:51 plattpcn kernel: [   20.091007] task: ffff8800b8f68000 ti: ffff8800b9148000 task.ti: ffff8800b9148000
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RIP: 0010:[<ffffffffa057b061>]  [<ffffffffa057b061>] dib7000p_attach+0x11/0xa0 [dib7000p]
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RSP: 0018:ffff8800b914ba88  EFLAGS: 00010202
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RAX: 0000000000000010 RBX: ffff8800ba9d1278 RCX: ffffffffa0581040
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RDX: ffffffffa0581040 RSI: ffffffffa0581c2b RDI: 0000000000000010
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RBP: ffff8800b914ba88 R08: ffffffff810e47a0 R09: 00000001802a0029
Jan 29 21:26:51 plattpcn kernel: [   20.091007] R10: ffffea0002ed9fc0 R11: ffffffff8107cf84 R12: 0000000000000000
Jan 29 21:26:51 plattpcn kernel: [   20.091007] R13: 0000000000000010 R14: ffff8800ba9d1278 R15: ffff8800ba9d1398
Jan 29 21:26:51 plattpcn kernel: [   20.091007] FS:  00007fd441492880(0000) GS:ffff88013fc00000(0000) knlGS:0000000000000000
Jan 29 21:26:51 plattpcn kernel: [   20.091007] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
Jan 29 21:26:51 plattpcn kernel: [   20.091007] CR2: 0000000000000080 CR3: 0000000036892000 CR4: 00000000000007f0
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Stack:
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  ffff8800b914bab8 ffffffffa055adab ffff8800ba9d1278 ffff8800ba9d1278
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  ffff8800ba9d1278 0000000000000000 ffff8800b914baf8 ffffffffa04776b8
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  ffff8800ba9d0000 0000000000000000 ffff8800ba9d1278 ffff8800ba9d0000
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Call Trace:
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa055adab>] stk7700P2_frontend_attach+0x3b/0x1f0 [dvb_usb_dib0700]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa04776b8>] dvb_usb_adapter_frontend_init+0xf8/0x1b0 [dvb_usb]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa047694c>] dvb_usb_device_init+0x45c/0x610 [dvb_usb]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa055731a>] dib0700_probe+0x6a/0x100 [dvb_usb_dib0700]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff8175deb6>] ? mutex_lock+0x16/0x37
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff8156d12f>] usb_probe_interface+0x1df/0x330
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814afead>] driver_probe_device+0x12d/0x3e0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814b023b>] __driver_attach+0x9b/0xa0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814b01a0>] ? __device_attach+0x40/0x40
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814addc3>] bus_for_each_dev+0x63/0xa0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814af88e>] driver_attach+0x1e/0x20
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814af490>] bus_add_driver+0x180/0x240
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff814b0a24>] driver_register+0x64/0xf0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff8156b792>] usb_register_driver+0x82/0x160
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa04bc000>] ? 0xffffffffa04bc000
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffffa04bc01e>] dib0700_driver_init+0x1e/0x1000 [dvb_usb_dib0700]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff8100212c>] do_one_initcall+0xbc/0x1f0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff8119bf42>] ? __vunmap+0xc2/0x110
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff810e9245>] load_module+0x1d35/0x27d0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff810e4f90>] ? store_uevent+0x40/0x40
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff810e9e56>] SyS_finit_module+0x86/0xb0
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  [<ffffffff817603ed>] system_call_fastpath+0x16/0x1b
Jan 29 21:26:51 plattpcn kernel: [   20.091007] Code: 8b 87 18 03 00 00 55 48 89 e5 5d 48 05 68 16 00 00 c3 0f 1f 84 00 00 00 00 00 66 66 66 66 90 55 48 85 ff 48 89 f8 48 89 e5 74 7f <48> c7 47 70 90 c9 57 a0 48 c7 47 68 00 ba 57 a0 48 c7 47 30 80 
Jan 29 21:26:51 plattpcn kernel: [   20.091007] RIP  [<ffffffffa057b061>] dib7000p_attach+0x11/0xa0 [dib7000p]
Jan 29 21:26:51 plattpcn kernel: [   20.091007]  RSP <ffff8800b914ba88>
Jan 29 21:26:51 plattpcn kernel: [   20.091007] CR2: 0000000000000080
Jan 29 21:26:51 plattpcn kernel: [   20.102621] ---[ end trace 11794293bad0bfef ]---
Comment 1 Jonas Jonsson 2015-01-29 21:15:35 UTC
Created attachment 165211 [details]
The .config-file that the kernel is built with ...

I'm running on an old HP Pavillion laptop
DMI: Hewlett-Packard HP Pavilion dv9700 Notebook PC    /30CB, BIOS F.59      11/25/2008
smpboot: CPU0: Intel(R) Core(TM)2 Duo CPU     T7700  @ 2.40GHz (fam: 06, model: 0f, stepping: 0b)
Comment 2 Greg Kroah-Hartman 2015-01-29 21:30:05 UTC
On Thu, Jan 29, 2015 at 09:08:00PM +0000, bugzilla-daemon@bugzilla.kernel.org wrote:
> https://bugzilla.kernel.org/show_bug.cgi?id=92301
> 
>             Bug ID: 92301
>            Summary: Attaching Yuan EC372S (HP ExpressCard, PN:412110-002)
>                     gives kernel trouble

Please send to the linux-usb@vger.kernel.org mailing list.
Comment 3 Jonas Jonsson 2015-02-02 10:34:08 UTC
(In reply to Greg Kroah-Hartman from comment #2)
> On Thu, Jan 29, 2015 at 09:08:00PM +0000,
> bugzilla-daemon@bugzilla.kernel.org wrote:
> > https://bugzilla.kernel.org/show_bug.cgi?id=92301
> > 
> >             Bug ID: 92301
> >            Summary: Attaching Yuan EC372S (HP ExpressCard, PN:412110-002)
> >                     gives kernel trouble
> 
> Please send to the linux-usb@vger.kernel.org mailing list.

Done.
Comment 4 Bernhard B.A. 2015-04-19 19:50:07 UTC
Hello,

I have the same bug, mentioned in the bugreport, but with a USB TV-Stick DVB-T "Terratec Cinergy DT XS Diversity".

This problem was not in kernel 3.16.x , I use Ubuntu 14.04.x 64bit, kernel 3.19.3.

Thank you for your help! Also I have sent this to linux-usb@vger.kernel.org, but so far no response.

Best regards, Bernhard 

Apr  9 18:01:03 stargazer kernel: [   70.017022] usb 3-2.4.1: new high-speed USB device number 4 using xhci_hcd
Apr  9 18:01:03 stargazer kernel: [   70.107491] usb 3-2.4.1: New USB device found, idVendor=0ccd, idProduct=005a
Apr  9 18:01:03 stargazer kernel: [   70.107494] usb 3-2.4.1: New USB device strings: Mfr=1, Product=2, SerialNumber=3
Apr  9 18:01:03 stargazer kernel: [   70.107495] usb 3-2.4.1: Product: Cinergy DT XS
Apr  9 18:01:03 stargazer kernel: [   70.107497] usb 3-2.4.1: Manufacturer: TerraTec
Apr  9 18:01:03 stargazer kernel: [   70.107498] usb 3-2.4.1: SerialNumber: 070201001111
Apr  9 18:01:03 stargazer mtp-probe: checking bus 3, device 4: "/sys/devices/pci0000:00/0000:00:1c.0/0000:06:00.0/0000:07:09.0/0000:0b:00.0/usb3/3-2/3-2.4/3-2.4.1"
Apr  9 18:01:03 stargazer mtp-probe: bus: 3, device: 4 was not an MTP device
Apr  9 18:01:03 stargazer kernel: [   70.139371] dvb-usb: found a 'Terratec Cinergy DT XS Diversity' in cold state, will try to load a firmware
Apr  9 18:01:03 stargazer kernel: [   70.139617] dvb-usb: downloading firmware from file 'dvb-usb-dib0700-1.20.fw'
Apr  9 18:01:03 stargazer kernel: [   70.543833] dib0700: firmware started successfully.
Apr  9 18:01:04 stargazer kernel: [   71.047012] dvb-usb: found a 'Terratec Cinergy DT XS Diversity' in warm state.
Apr  9 18:01:04 stargazer kernel: [   71.047309] dvb-usb: will pass the complete MPEG2 transport stream to the software demuxer.
Apr  9 18:01:04 stargazer kernel: [   71.047746] DVB: registering new adapter (Terratec Cinergy DT XS Diversity)
Apr  9 18:01:04 stargazer kernel: [   71.057441] BUG: unable to handle kernel NULL pointer dereference at 0000000000000080
Apr  9 18:01:04 stargazer kernel: [   71.057450] IP: [<ffffffffc0ded141>] dib7000p_attach+0x11/0xa0 [dib7000p]
Apr  9 18:01:04 stargazer kernel: [   71.057457] PGD cd4be067 PUD cd4e4067 PMD 0
Apr  9 18:01:04 stargazer kernel: [   71.057463] Oops: 0002 [#1] SMP
Apr  9 18:01:04 stargazer kernel: [   71.057466] Modules linked in: dib7000p dvb_usb_dib0700(+) dib7000m dib0090 dib0070 dib3000mc dibx000_common dvb_usb dvb_core rc_core dm_crypt nf_conntrack_ipv6 nf_defrag_ipv6 ip6table_filter ip6_tables nf_conntrack_ipv4 nf_defrag_ipv4 xt_conntrack nf_conntrack iptable_filter ip_tables x_tables snd_hda_codec_hdmi snd_usb_audio joydev snd_usbmidi_lib gpio_ich mxm_wmi hid_logitech_hidpp snd_hda_codec_via snd_hda_codec_generic nvidia(POE) snd_hda_intel kvm_intel snd_hda_controller snd_hda_codec kvm snd_hwdep snd_pcm snd_seq_midi snd_seq_midi_event snd_rawmidi serio_raw i7core_edac edac_core snd_seq snd_seq_device snd_timer snd drm soundcore lpc_ich shpchp rfcomm bnep bluetooth wmi mac_hid binfmt_misc parport_pc ppdev coretemp lp parport pata_acpi hid_logitech_dj hid_generic usbhid hid psmouse firewire_ohci firewire_core r8169 ahci crc_itu_t pata_jmicron mii libahci
Apr  9 18:01:04 stargazer kernel: [   71.057531] CPU: 2 PID: 3496 Comm: systemd-udevd Tainted: P           OE  3.19.0-12-generic #12~14.04.1-Ubuntu
Apr  9 18:01:04 stargazer kernel: [   71.057533] Hardware name: System manufacturer System Product Name/P7P55D-E PRO, BIOS 1703    06/26/2012
Apr  9 18:01:04 stargazer kernel: [   71.057535] task: ffff880036275850 ti: ffff8800cd548000 task.ti: ffff8800cd548000
Apr  9 18:01:04 stargazer kernel: [   71.057537] RIP: 0010:[<ffffffffc0ded141>]  [<ffffffffc0ded141>] dib7000p_attach+0x11/0xa0 [dib7000p]
Apr  9 18:01:04 stargazer kernel: [   71.057541] RSP: 0018:ffff8800cd54ba68  EFLAGS: 00010202
Apr  9 18:01:04 stargazer kernel: [   71.057543] RAX: 0000000000000010 RBX: ffff8803e0aed278 RCX: 0000000000000001
Apr  9 18:01:04 stargazer kernel: [   71.057545] RDX: 0000000000000001 RSI: ffffffffc0df4758 RDI: 0000000000000010
Apr  9 18:01:04 stargazer kernel: [   71.057546] RBP: ffff8800cd54ba68 R08: ffffffff810f1470 R09: ffff88041fc57140
Apr  9 18:01:04 stargazer kernel: [   71.057548] R10: ffffea000f66a680 R11: ffffffff81088634 R12: 0000000000000000
Apr  9 18:01:04 stargazer kernel: [   71.057549] R13: 0000000000000010 R14: ffff8803e0aed278 R15: ffff8803e0aed398
Apr  9 18:01:04 stargazer kernel: [   71.057552] FS:  00007f688ee9d880(0000) GS:ffff88041fc40000(0000) knlGS:0000000000000000
Apr  9 18:01:04 stargazer kernel: [   71.057554] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
Apr  9 18:01:04 stargazer kernel: [   71.057555] CR2: 0000000000000080 CR3: 00000000cd4e7000 CR4: 00000000000007e0
Apr  9 18:01:04 stargazer kernel: [   71.057557] Stack:
Apr  9 18:01:04 stargazer kernel: [   71.057558]  ffff8800cd54ba98 ffffffffc0e6105b ffff8803e0aed398 ffff8803e0aed278
Apr  9 18:01:04 stargazer kernel: [   71.057561]  ffff8803e0aed278 0000000000000000 ffff8800cd54bad8 ffffffffc0df88d8
Apr  9 18:01:04 stargazer kernel: [   71.057564]  ffff8803e0aec000 0000000000000000 ffff8803e0aed278 ffff8803e0aec000
Apr  9 18:01:04 stargazer kernel: [   71.057567] Call Trace:
Apr  9 18:01:04 stargazer kernel: [   71.057575]  [<ffffffffc0e6105b>] stk7700d_frontend_attach+0x3b/0x200 [dvb_usb_dib0700]
Apr  9 18:01:04 stargazer kernel: [   71.057580]  [<ffffffffc0df88d8>] dvb_usb_adapter_frontend_init+0xf8/0x1b0 [dvb_usb]
Apr  9 18:01:04 stargazer kernel: [   71.057583]  [<ffffffffc0df7acc>] dvb_usb_device_init+0x4fc/0x750 [dvb_usb]
Apr  9 18:01:04 stargazer kernel: [   71.057588]  [<ffffffffc0e5d33a>] dib0700_probe+0x6a/0x100 [dvb_usb_dib0700]
Apr  9 18:01:04 stargazer kernel: [   71.057594]  [<ffffffff817b11b6>] ? mutex_lock+0x16/0x37
Apr  9 18:01:04 stargazer kernel: [   71.057598]  [<ffffffff815add1b>] usb_probe_interface+0x1bb/0x300
Apr  9 18:01:04 stargazer kernel: [   71.057603]  [<ffffffff814f2d2d>] driver_probe_device+0x12d/0x3e0
Apr  9 18:01:04 stargazer kernel: [   71.057606]  [<ffffffff814f30bb>] __driver_attach+0x9b/0xa0
Apr  9 18:01:04 stargazer kernel: [   71.057609]  [<ffffffff814f3020>] ? __device_attach+0x40/0x40
Apr  9 18:01:04 stargazer kernel: [   71.057612]  [<ffffffff814f0c33>] bus_for_each_dev+0x63/0xa0
Apr  9 18:01:04 stargazer kernel: [   71.057615]  [<ffffffff814f270e>] driver_attach+0x1e/0x20
Apr  9 18:01:04 stargazer kernel: [   71.057618]  [<ffffffff814f2300>] bus_add_driver+0x180/0x240
Apr  9 18:01:04 stargazer kernel: [   71.057621]  [<ffffffff814f38a4>] driver_register+0x64/0xf0
Apr  9 18:01:04 stargazer kernel: [   71.057624]  [<ffffffff815ac4e2>] usb_register_driver+0x82/0x160
Apr  9 18:01:04 stargazer kernel: [   71.057628]  [<ffffffffc0e81000>] ? 0xffffffffc0e81000
Apr  9 18:01:04 stargazer kernel: [   71.057633]  [<ffffffffc0e8101e>] dib0700_driver_init+0x1e/0x1000 [dvb_usb_dib0700]
Apr  9 18:01:04 stargazer kernel: [   71.057637]  [<ffffffff81002144>] do_one_initcall+0xd4/0x210
Apr  9 18:01:04 stargazer kernel: [   71.057641]  [<ffffffff811cd549>] ? kmem_cache_alloc_trace+0x199/0x220
Apr  9 18:01:04 stargazer kernel: [   71.057645]  [<ffffffff810f639d>] ? load_module+0x162d/0x1ca0
Apr  9 18:01:04 stargazer kernel: [   71.057648]  [<ffffffff810f63d6>] load_module+0x1666/0x1ca0
Apr  9 18:01:04 stargazer kernel: [   71.057651]  [<ffffffff810f1c90>] ? store_uevent+0x40/0x40
Apr  9 18:01:04 stargazer kernel: [   71.057655]  [<ffffffff810f6b86>] SyS_finit_module+0x86/0xb0
Apr  9 18:01:04 stargazer kernel: [   71.057659]  [<ffffffff817b328d>] system_call_fastpath+0x16/0x1b
Apr  9 18:01:04 stargazer kernel: [   71.057660] Code: 48 8b 87 18 03 00 00 48 89 e5 48 05 68 16 00 00 5d c3 0f 1f 84 00 00 00 00 00 66 66 66 66 90 55 48 85 ff 48 89 f8 48 89 e5 74 7f <48> c7 47 70 80 ec de c0 48 c7 47 68 f0 dc de c0 48 c7 47 30 70
Apr  9 18:01:04 stargazer kernel: [   71.057688] RIP  [<ffffffffc0ded141>] dib7000p_attach+0x11/0xa0 [dib7000p]
Apr  9 18:01:04 stargazer kernel: [   71.057692]  RSP <ffff8800cd54ba68>
Apr  9 18:01:04 stargazer kernel: [   71.057693] CR2: 0000000000000080
Apr  9 18:01:04 stargazer kernel: [   71.057696] ---[ end trace 36adf9b87fe4bc99 ]---
Comment 5 Bernhard B.A. 2015-04-19 20:38:49 UTC
kernel version 4.0.0 has the same problem!
Comment 6 Bernhard B.A. 2015-04-29 18:48:15 UTC
kernels 3.19.6 and 4.0.1 tested, still no luck!
Comment 7 Thomas Reitmayr 2015-05-02 07:22:29 UTC
I submitted a patch to linux-media@vger.kernel.org. As described in the commit message the problem was introduced in kernel version 3.17 and concerns a few device types handled by dvb_usb_dib0700. See http://permalink.gmane.org/gmane.linux.drivers.video-input-infrastructure/90691 .
Comment 8 Thomas Reitmayr 2015-05-15 19:51:46 UTC
Patch landed in linux-stable mailing list, see
http://permalink.gmane.org/gmane.linux.kernel.stable/135755
Comment 9 Bernhard B.A. 2015-05-17 12:49:56 UTC
Thank you very much!

Best regards, Bernhard
Comment 10 Bernhard B.A. 2015-06-25 15:56:32 UTC
Do you know when the patch will be included in the latest kernel and lts-kernels; 3.18, 4.0, 4.1?
Comment 11 Thomas Reitmayr 2015-06-25 19:51:47 UTC
I found the patch only in the linux-next tree, so that probably means 4.2, although it was forwarded to the linux-stable mailing list. Not sure how the process looks like for getting it into an lts kernel.

Note You need to log in before you can comment on or make changes to this bug.